
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct net_device {int dummy; } ;
struct i40e_vsi {TYPE_3__** tx_rings; TYPE_2__** rx_rings; } ;
struct i40e_pf {size_t lan_vsi; struct i40e_vsi** vsi; } ;
struct i40e_netdev_priv {TYPE_1__* vsi; } ;
struct ethtool_ringparam {scalar_t__ rx_jumbo_pending; scalar_t__ rx_mini_pending; int tx_pending; int rx_pending; scalar_t__ rx_jumbo_max_pending; scalar_t__ rx_mini_max_pending; void* tx_max_pending; void* rx_max_pending; } ;
struct TYPE_6__ {int count; } ;
struct TYPE_5__ {int count; } ;
struct TYPE_4__ {struct i40e_pf* back; } ;


 void* I40E_MAX_NUM_DESCRIPTORS ;
 struct i40e_netdev_priv* netdev_priv (struct net_device*) ;

__attribute__((used)) static void i40e_get_ringparam(struct net_device *netdev,
          struct ethtool_ringparam *ring)
{
 struct i40e_netdev_priv *np = netdev_priv(netdev);
 struct i40e_pf *pf = np->vsi->back;
 struct i40e_vsi *vsi = pf->vsi[pf->lan_vsi];

 ring->rx_max_pending = I40E_MAX_NUM_DESCRIPTORS;
 ring->tx_max_pending = I40E_MAX_NUM_DESCRIPTORS;
 ring->rx_mini_max_pending = 0;
 ring->rx_jumbo_max_pending = 0;
 ring->rx_pending = vsi->rx_rings[0]->count;
 ring->tx_pending = vsi->tx_rings[0]->count;
 ring->rx_mini_pending = 0;
 ring->rx_jumbo_pending = 0;
}
